# check-markdown-links

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  Makefile  pyproject.toml  readme.md
src/check_markdown_links/: __init__.py
tests/: test_readme.py
